nav bar fixed font, width, spacing

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -44,6 +44,7 @@
   --ifm-global-radius: 0.625rem;
   --ifm-table-head-font-weight: 500;
   --ifm-table-border-width: 0.8px;
+  --ifm-navbar-sidebar-width: 100vw;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -173,6 +174,24 @@ h4 {
 
 [data-theme="dark"] .menu__list-item-collapsible--active {
   background-color: var(--ifm-menu-color-background-active);
+}
+
+.menu__list-item:not(:first-child) {
+  margin-top: 0.75rem;
+}
+
+.menu__list-item {
+  font-size: 18px;
+}
+
+.theme-doc-sidebar-menu {
+  padding-top: 1.5rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.menu__link {
+  padding: 10px 12px;
 }
 
 .menu__caret:before {
